Assignment-2-Phase-2/Assign 2 Ph 2/Assign 2_Phase 2_Start/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\Assignment-2-Phase-2\Assign 2 Ph 2\Assign 2_Phase 2_Start
-d
D:\Assignment-2-Phase-2\Assign 2 Ph 2\Assign 2_Phase 2_Start\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\Assignment-2-Phase-2\Assign 2 Ph 2\Assign 2_Phase 2_Start\Client1.java
<---- end of javadoc command ---->
Loading source file D:\Assignment-2-Phase-2\Assign 2 Ph 2\Assign 2_Phase 2_Start\Client1.java...
D:\Assignment-2-Phase-2\Assign 2 Ph 2\Assign 2_Phase 2_Start\Client1.java:29: error: : expected
            case '1'
                    ^
1 error
